--- a/css/style.css
+++ b/css/style.css
@@ -65,15 +65,82 @@ body {
     transition-duration: var(--main-duration);
 }
 
-.icon:hover {
+.icon span:hover {
     background-color: #10cab7;
 }
 
-.icon:hover+.icon span:nth-child(2) {
+.icon:hover+ul {
     width: 35px;
-    transition: all ease 0.5;
+    display: block;
+    transition: all 0.5s ease-in-out;
 }
 
 .links ul {
     display: none;
+}
+
+/* Landing Section Start */
+.landing {
+    background-image: url('/imgs/2.jpg');
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
+.intro-text {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.intro-text h1 {
+    color: var(--main-color);
+    font-weight: 700;
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+}
+
+/* Features Start */
+.features {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    padding: 70px 20px;
+    background-color: var(--section-background);
+}
+
+.feat-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    grid-gap: 20px;
+}
+
+.feat {
+    height: 300px;
+    padding: 20px;
+    text-align: center;
+    position: relative;
+}
+
+.feat h3 {
+    margin-top: 50px;
+    font-weight: 800;
+    font-size: 1.2rem;
+}
+
+.feat p {
+    margin-top: 10px;
+    color: #2c4755;
+}
+
+.feat .icon {
+    width: 20px;
+    height: 40px;
+    border: 1px solid var(--main-color);
+    position: absolute;
+    left: 50%;
+    margin-left: -10px;
 }
