--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
     padding: 20px 0;
 }
 
-.container {
+.header .container {
     width: 63%;
     display: flex;
     justify-content: space-between;
@@ -143,4 +143,111 @@ body {
     position: absolute;
     left: 50%;
     margin-left: -10px;
+}
+
+.services {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    padding: 70px 0;
+    position: relative;
+}
+
+.services .container {
+    padding: 0 200px;
+}
+
+.special-heading {
+    font-size: 4.5rem;
+    font-weight: 900;
+    color: #d5d5d5;
+    text-align: center;
+}
+
+.p {
+    text-align: center;
+    position: absolute;
+    top: 160px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #707070;
+}
+
+.services-content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 40px;
+}
+
+.col {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0 20px;
+}
+
+.srv {
+    display: flex;
+}
+
+.srv .icon {
+    width: 40px;
+    height: 30px;
+    border: 1px solid var(--main-color);
+    margin-right: 10px;
+}
+
+.srv .text p {
+    margin-top: 30px;
+    line-height: 40px;
+    color: #707070;
+}
+
+.image.image-column {
+    position: relative;
+    width: 250px;
+    height: 400px;
+}
+
+.image.image-column img {
+    width: 100%;
+    height: 100%;
+}
+
+.image.image-column::after {
+    content: '';
+    width: 100px;
+    height: 500px;
+    position: absolute;
+    right: -50px;
+    top: -50px;
+    background-color: #2c4755;
+    z-index: -1;
+}
+
+.portfolio {
+    padding: 70px 0;
+    background-color: var(--section-background);
+    display: flex;
+    justify-content: center;
+}
+
+.portfolio .container {
+    position: relative;
+}
+
+.portfolio .container .p {
+    top: 100px;
+}
+
+.portfolio-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+    grid-gap: 20px;
+}
+
+.card {
+    background-color: white;
+    padding: 40px;
 }
